# HospitalAssistance

./: README.md
flask_hospital/: flask_server.py  flask_server_fin.py  flask_server_pic.py  test.py  webcam.py
flask_hospital/dicom_output/: 1.2.410.200028.100.3.20190920.1208500638.12380.1.5.dcm  1.2.410.200028.100.3.20190925.1056080334.32610.1.2.dcm
flask_hospital/templates/: index copy.html  index.html  index_.html  index__.html
log/: latest_list
src/: 바꾼거
src/hospital/: package.xml  setup.py
src/hospital/hospital/controller/: robot_control.py  tracking.py
src/hospital/hospital/detection/: DetectionManager copy.py  DetectionManager.py  detection.py  realsense.py  tracking_detection.py  yolo.py  yolo_scalpel_tip.py
src/hospital/hospital/voice/: get_keyword.py  get_keyword__.py  stt.py  test_wake_up.py  voice_TTS.py  wakeup_word.py
src/hospital/resource/: .env  T_gripper2camera.npy  T_gripper2suction.npy  class_name_tool.json  promt_content.txt  surgery_info.txt
src/hospital_interfaces/: CMakeLists.txt  package.xml
src/hospital_interfaces/srv/: DepthAnglePos.srv  ObjectTarget.srv
